<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/letterListFragment">

    <fragment
        android:id="@+id/letterListFragment"
        android:name="com.kuldeepjoshi.kotlintutorial.navigationTutorial.fragment.LetterListFragment"
        android:label="Letter LIst "
        tools:layout="@layout/fragment_letter_list">
        <action
            android:id="@+id/action_letterListFragment_to_wordsListFragment"
            app:destination="@id/wordsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/wordsListFragment"
        android:name="com.kuldeepjoshi.kotlintutorial.navigationTutorial.fragment.WordsListFragment"
        android:label="@string/word_list_fragment_label"
        tools:layout="@layout/fragment_words_list">
        <argument
            android:name="letter"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.kuldeepjoshi.kotlintutorial.dependencyInjection.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.kuldeepjoshi.kotlintutorial.dependencyInjection.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>